...
  const selectedFilters = useReactiveVar(selectedFiltersVar)

  return (
    <View className={styleClassName}>
      <View className="flex-row bg-white rounded-lg mx-6 my-3" style={{ ...shadowCard }}>
        <SearchBar
          testId="search-bar"
          onChange={(value) => searchQueryVar(value)}
          autofocus={autofocus}
        />

        <Icon
          icon="settings"
...
        )}
      </View>

      <FilterChips
        styleClassName="px-6"
        categories={selectedFilters}
        testIDItem="filter-chip"
        onDismiss={(filter) => {
          removeFilter(filter, false)
          capture('browse:filter_remove', { filter_name: filter.name })
        }}
      />
    </View>
...
