...
        <View className="flex-1 -mt-12 py-8 bg-white rounded-t-[50px] px-6">
          {error && <InfoBox type="error" description={error?.message} />}

          <View>
            <View className="justify-between flex-row">
              <Text
                testID="recipe-name"
                loading={firstTimeLoading}
                skeletonWidth={200}
                h1
                styleClassName="mb-3 flex-1"
              >
                {recipe?.name}
              </Text>
              <RecipeShare recipe={recipe} loading={firstTimeLoading} />
            </View>
            <View className="-mb-3">
              <Markdown
                testID="recipe-description"
                loading={firstTimeLoading}
                skeletonLinesNumber={4}
                text={recipe?.description}
              />
            </View>
            <View className="py-6">
...
