...
      {orderedCategories.map(({ listItems, title, id }, index) =>
        index !== 3 ? (
          <HorizontalList
            key={id}
            listItems={listItems}
            title={title}
            testIDItem={index === 0 ? 'recipe-card' : 'category-card'}
            wide={index === 1}
            center={index === 2}
            showCount={false}
            styleClassName="mb-8"
          />
        ) : (
...
