appId: ''
---
- runFlow: ../prep/launch-app.yml
- runFlow: ../prep/go-to-category.yml
# Check that the recipes grid is loaded with correct filter
- assertVisible:
    id: filter-chip
    text: ${ maestro.copiedText }

# Check that the recipes grid is loaded with correct recipes
- assertVisible:
    id: 'recipe-card'
    index: 0
- assertVisible:
    id: 'recipe-card'
    index: 1
- copyTextFrom:
    id: 'recipe-card'
    index: 1
- tapOn:
    id: 'recipe-card'
    index: 1
- assertVisible:
    id: recipe-name
    text: ${ maestro.copiedText }
- tapOn:
    id: back-button

# Search for a single recipe
- tapOn:
    id: 'search-bar'
- inputText: ${ maestro.copiedText }
- assertVisible: ${ maestro.copiedText }
