appId: ''
---
- runFlow: ../prep/launch-app.yml
- runFlow: ../prep/go-to-recipe.yml
- assertVisible:
    id: recipe-name
    text: ${ maestro.copiedText }
- assertVisible:
    id: recipe-description
- assertVisible:
    id: recipe-attribute-name
    index: 0
- assertVisible:
    id: recipe-attribute-name
    index: 1
- assertVisible:
    id: recipe-attribute-name
    index: 2
- assertVisible:
    id: recipe-ingredient
    index: 0

# Check ingredient details
- copyTextFrom:
    id: recipe-ingredient-name
    index: 0
- tapOn:
    id: recipe-ingredient-name
    index: 0
- assertVisible:
    id: ingredient-name
    text: ${ maestro.copiedText }
- assertVisible:
    id: ingredient-description

# Check similar recipes link
- copyTextFrom:
    id: card
    index: 0
- tapOn:
    id: card
- assertVisible:
    id: recipe-name
    text: ${ maestro.copiedText }

# Check recipe steps
- tapOn: Method
- assertVisible:
    id: recipe-step
    index: 0

# Check equipment details
- tapOn: Equipment
- assertVisible:
    id: recipe-equipment
    index: 0
- copyTextFrom:
    id: recipe-equipment
    index: 0
- tapOn:
    id: recipe-equipment
    index: 0
- assertVisible:
    id: equipment-name
    text: ${ maestro.copiedText }
- assertVisible:
    id: equipment-description
